--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,5 +6,7 @@
       <li><a href="/">Blogs</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/blogs/create">New Blog</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/signup">Sign Up</a></li>
     </ul>
   </nav>
